[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanall.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc22-day1"
path = "src/day1.rs"

[[bin]]
name = "aoc22-day2"
path = "src/day2.rs"


[dependencies]
adventlib = { path="../adventlib" }
regex = "~1.4.2"
itertools = "~0.10.3"
console-bitmap = { git = "https://github.com/anall/console-bitmap-rs" }
pathfinding = "2.2.2"

#lazy_static = "~1.4.0"
#intspan = "~0.4.14"
