[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanall.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc22-day1"
path = "src/day1.rs"

[[bin]]
name = "aoc22-day2"
path = "src/day2.rs"

[[bin]]
name = "aoc22-day3"
path = "src/day3.rs"

[[bin]]
name = "aoc22-day4"
path = "src/day4.rs"

[[bin]]
name = "aoc22-day5"
path = "src/day5.rs"

[[bin]]
name = "aoc22-day6"
path = "src/day6.rs"

[[bin]]
name = "aoc22-day7"
path = "src/day7.rs"

[[bin]]
name = "aoc22-day8"
path = "src/day8.rs"

[[bin]]
name = "aoc22-day9"
path = "src/day9.rs"

[[bin]]
name = "aoc22-day10"
path = "src/day10.rs"

[[bin]]
name = "aoc22-day11"
path = "src/day11.rs"

[[bin]]
name = "aoc22-day12"
path = "src/day12.rs"

[[bin]]
name = "aoc22-day13"
path = "src/day13.rs"

[[bin]]
name = "aoc22-day14"
path = "src/day14.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
adventlib = { path="../adventlib" }
regex = "~1.4.2"
itertools = "~0.10.3"
console-bitmap = { git = "https://github.com/anall/console-bitmap-rs" }
pathfinding = "2.2.2"
lazy_static = "~1.4.0"
#intspan = "~0.4.14"